Sat Jun 15 17:14:32 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigmul1_normal): Shrink the result Bignum length.

Sat Jun 15 10:19:42 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/bigdecimal/bigdecimal.c: Update overview formatting of headers

Sat Jun 15 10:19:06 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/bigdecimal/bigdecimal.gemspec: Update authors

Sat Jun 15 10:02:26 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bdigs_small_rshift): Extracted from big_rshift.
	  (bigdivrem): Use bdigs_small_rshift.

Sat Jun 15 08:37:28 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): propagate absolute path from the
	  binding if it is given explicitly.  patch by Gat (Dawid Janczak) at
	  [ruby-core:55123]. [Bug #8436]

Sat Jun 15 02:40:18 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bdigs_small_lshift): Extracted from big_lshift.
	  (bigdivrem): Use bdigs_small_lshift.

Fri Jun 14 20:47:41 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Reduce number of digits before bignew() for div.

Fri Jun 14 20:12:37 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Use bignew when ny == 1.

Fri Jun 14 18:52:51 2013  Koichi Sasada  <ko1@atdot.net>

	* compile.c (rb_iseq_compile_node): fix location of a `trace'
	  instruction (b_return event).
	  [ruby-core:55305] [ruby-trunk - Bug #8489]
	  (need a backport to 2.0.0?)

	* test/ruby/test_settracefunc.rb: add a test.

Fri Jun 14 18:18:07 2013  Koichi Sasada  <ko1@atdot.net>

	* class.c, include/ruby/ruby.h: add write barriers for T_CLASS,
	  T_MODULE, T_ICLASS.

	* constant.h: constify rb_const_entry_t::value and file to detect
	  assignment.

	* variable.c, internal.h (rb_st_insert_id_and_value, rb_st_copy): 
	  added. update table with write barrier.

	* method.h: constify some variables to detect assignment.

	* object.c (init_copy): add WBs.

	* variable.c: ditto.

	* vm_method.c (rb_add_method): ditto.
